     24- sqrtnr algorithm (Newton iteration instead of exp(log(x)/n)
BA   25- quadgen/quadunit: allow to specify the variable name instead of w.
     26- [libpari] rename vecbinome -> vecbinomial
     27- [libpari] rename padic_lindep -> lindep_padic, Xadic_lindep ->
         lindep_Xadic
     28- x^(t_FRAC) use sqrtnr if possible
BA   29- keri replaced by ZM_ker (use modular algorithm)
     30- lfuncreate() change of format for (p,d)->Lp closure:
         - Lp here and in bad primes [p,Lp] must now use the actual local
           factor and not its inverse
         - d is now the exact number of terms needed (was 1 less), i.e.
           one need only return Lp + O(x^d)
         - bad primes are given as a separate 2nd component:
           [Lp, [[p1,L1],...[pk,Lk]]], not as [Lp, [p1,L1],...[pk,Lk]]
     31- faster nfgaloismatrix / nfgaloisapply(nf,s, ideal)
     32- nf struct:  nf[7] now stores nf.zk / content(nf.zk). Old format is
         still supported (to read in data involving old-style nf generated by
         gp version < 2.10) but incurs a small speed penalty.
JD   33- move plotport.c to libpari
     34- default window size for hi-res plots using --graphic=X
     35- component(t_POL T, n) used to return polcoeff(T, n-1) for all n >= 1
         [ undocumented compatibility behaviour, deprecated since the
         introduction of polcoeff ], and raised an exception for n <= 0.
         Now returns a true GEN component whenever it exists and raises an
         exception when it does not [ n <= 0 or n > polcoeff(T)+1 ].
BA   36- Fl_addmul_pre: change arguments order to follow Fp_addmul convention
     37- issquarefree / isfundamental with integer argument: allow factored form
     38- change polred-type algorithm to return 'x' (no longer 'x-1') for
         the field of rational numbers (make it consistent with polredabs)

  Removed
      1- file 'MACHINES' (no longer maintained)
      2- useless argument nf in ZC_nfval, ZC_nfvalrem, pr_equal, ZC_prdvd