@@ -1,14 +1,19 @@
 Function: ellisomat
 Section: elliptic_curves
 C-Name: ellisomat
-Prototype: GD0,L,
-Help: ellisomat(E, {fl=0}): E being an elliptic curve over Q, return a list of
- representatives of the isomorphism classes of elliptic curves isogenous to E,
+Prototype: GD0,L,D0,L,
+Help: ellisomat(E, {p=0}, {fl=0}): E being an elliptic curve over a number field,
+ return a list of representatives of the isomorphism classes of elliptic curves
+ isogenous to E,
  with the corresponding isogenies from E and their dual, and the matrix of the
  degrees of the isogenies between the curves. If the flag fl is 1, the
  isogenies are not computed, which saves time.
+ If p is set it must be a prime number, in which case only isogenies of degree
+ a power of p are considered.
+ Currently the function has some limitation over a number field: p must be set
+ and the curve must not have CM.
 Doc:
- Given an elliptic curve $E$ defined over $\Q$, compute representatives of the
+ Given an elliptic curve $E$ defined over a number field, compute representatives of the
  isomorphism classes of elliptic curves $\Q$-isogenous to $E$. The function
  returns a vector $[L,M]$ where $L$ is a list of triples $[E_i, f_i, g_i]$,
  where $E_i$ is an elliptic curve in $[a_4,a_6]$ form, $f_i: E \to E_i$
@@ -17,6 +22,10 @@ Doc:
  $E_i$ and $E_j$. Furthermore the first curve $E_1$ is isomorphic to $E$
  by $f_1$. If the flag $\var{fl}=1$, the $f_i$ and $g_i$ are not computed,
  which saves time, and $L$ is the list of the curves $E_i$.
+ If $p$ is set it must be a prime number, in which case only isogenies of degree
+ a power of $p$ are considered.
+ Currently the function has some limitation over a number field: $p$ must be set
+ and the curve must not have CM.
  \bprog
  ? E = ellinit("14a1");
  ? [L,M] = ellisomat(E);
