@@ -2794,7 +2794,7 @@ long    ellisdivisible(GEN E, GEN P, GEN n, GEN *Q);
 
 GEN     ellisogenyapply(GEN f, GEN P);
 GEN     ellisogeny(GEN e, GEN G, long only_image, long vx, long vy);
-GEN     ellisomat(GEN E, long flag);
+GEN     ellisomat(GEN E, long p, long flag);
 
 /* ellsea.c */
 
