@@ -43,4 +43,20 @@
 y + 625/6)*x^4 + (-14375/27*y - 171875/54)*x^3 + (231250/27*y - 390625/27)*x
 ^2 + (-19062500/81*y + 19531250/81)*x + (792968750/729*y + 976562500/729), x
 ^2 - 25/3*x - 1250/9]]], [1, 5, 5; 5, 1, 25; 5, 25, 1]]
-Total time spent: 9593
+[[[[215/48, -5291/864], [x + 1/12, 1/2*x + (y + 1/2), 1], [x - 1/12, -1/2*x 
++ (y - 11/24), 1]], [[-1705/48, -57707/864], [x^3 - 23/12*x^2 + 53/6*x - 95/
+12, 1/2*x^4 + (y - 1)*x^3 + (-3*y - 4)*x^2 + (-5*y + 1)*x + (7*y + 7/2), x -
+ 1], [1/4*x^3 + x^2 - 291/64*x - 41483/3456, -1/8*x^4 + (1/8*y - 61/48)*x^3 
++ (13/16*y - 791/384)*x^2 + (1705/384*y + 13429/3456)*x + (48919/6912*y + 32
+8367/41472), x + 13/6]]], [1, 2; 2, 1]]
+[[[[215/48, -5291/864], [x + 1/12, 1/2*x + (y + 1/2), 1], [x - 1/12, -1/2*x 
++ (y - 11/24), 1]], [[-675/16, 6831/32], [x^3 + 3/4*x^2 + 19/2*x - 311/12, 1
+/2*x^4 + (y + 1)*x^3 + (y - 4)*x^2 + (-9*y + 23)*x + (55*y + 55/2), x + 1/3]
+, [1/9*x^3 - 1/4*x^2 - 141/16*x + 5613/64, -1/18*x^4 + (1/27*y - 1/3)*x^3 + 
+(-1/12*y + 87/16)*x^2 + (49/16*y - 48)*x + (-3601/64*y + 16947/512), x - 3/4
+]], [[-8185/48, -742643/864], [x^3 - 47/12*x^2 + 116/3*x - 62/3, 1/2*x^4 + (
+y - 5/2)*x^3 + (-6*y - 29/2)*x^2 + (-23*y - 59/2)*x + (-36*y - 18), x - 2], 
+[1/9*x^3 + 47/36*x^2 - 3695/432*x - 1464769/15552, -1/18*x^4 + (1/27*y - 3/2
+)*x^3 + (25/36*y - 3965/432)*x^2 + (10745/1296*y + 118411/7776)*x + (2098163
+/46656*y + 21431725/124416), x + 25/4]]], [1, 3, 3; 3, 1, 9; 3, 9, 1]]
+Total time spent: 1496
