@@ -17,7 +17,7 @@ check(V)=
   for(i=1,#V,
     my(E=ellinit(ellfromj(V[i])));
     my(Et=ellminimalmodel(ellinit(elltwist(E,ellminimaltwist(E,1)))));
-    my([L,M]=ellisomat(Et), [L2, M2] = ellisomat(Et, 1));
+    my([L,M]=ellisomat(Et), [L2, M2] = ellisomat(Et,, 1));
     if (M!=M2, error("ellisomat:",i));
     print(V[i],":",M,":",checkisov(Et,L)));
 }
@@ -26,4 +26,5 @@ check([-2^15,-11^2,-11*131^3,-17^2*101^3/2,-17*373^3*2^-17,-96^3,-7*11^3,-7*137^
 check([0,1728,-3375, 8000, 54000, 287496, -12288000, 16581375])
 check([9938375/21952, 111284641/50625, -10218313/17576, -25/2]);
 ellisomat(ellinit([0,-1,1,-10,-20]))
-
+ellisomat(ellinit([1,0,1,4,-6]),2)
+ellisomat(ellinit([1,0,1,4,-6]),3)
